Add UI boilerplate

--- a/src/app.css
+++ b/src/app.css
@@ -1,5 +1,5 @@
-@import "@fontsource/inter/400.css";
-@import "@fontsource/inter/700.css";
+@import "@fontsource/inter/400";
+@import "@fontsource/inter/700";
 
 @tailwind base;
 
